--- a/front-end/src/index.html
+++ b/front-end/src/index.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="utf-8">
   <title>NumbersApiProject</title>
-  <base href="/">
+  <base href="#/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Dosis|Raleway:500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Satisfy&display=swap" rel="stylesheet"> 
 </head>
 
 <body>
